[package]
name = "malrok"
version = "0.1.0"
edition = "2021"
description = "A top-down 3D MMORPG made with Bevy"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/afonsolage/malrok"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.20.0"
leafwing-input-manager = "0.10"
libnoise = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
